--- a/index.html
+++ b/index.html
@@ -98,11 +98,33 @@
 
     <div id="service-info" class="row">
         <div class="col-lg-12">
-            <div class="jumbotron">
-                <button type="button" class="close" aria-label="Close" onclick="closeDescription()"><span aria-hidden="true">&times;</span></button>
-                <p>DeepSpotCloud provides a way to execute deep learning task in a cost efficient way using GPU spot instances in AWS EC2. It utilizes spot instances across regions (continents) to broaden candidate instances. To preserve intermediate work even when an instance is interrupted due to an outbid event, DeepSpotCloud uses the checkpoint mechanism; an interrupted instance uploads a checkpoint outcome to a shared storage, and a new instance (in a different region/availability zone) resumes after downloading the checkpoint outcome.</p>
-                <p>The goal of this website is to show how DeepSpotCloud operates. It currently runs on an AWS EC2 g2.2xlarge spot instance while executing <a href="https://www.tensorflow.org/tutorials/deep_cnn">CIFAR-10 TensorFlow</a> job.</p>
-                <p><a class="btn btn-primary btn-lg" href="https://github.com/mjaysonnn/DeepSpotCloud" role="button">Code on Github</a></p>
+            <div class="jumbotron" style="">
+                <button type="button" class="close" aria-label="Close" onclick="closeDescription()"><span
+                        aria-hidden="true">&times;</span></button>
+                <div id="info-text-short">
+                    <p>DeepSpotCloud provides a way to execute deep learning task in a cost efficient way using GPU spot
+                        instances in AWS EC2...</p>
+                    <p>
+                        <button class="btn btn-primary btn-lg" role="button" onclick="expandServiceInfo()">Read More</button>
+                    </p>
+                </div>
+                <div id="info-text-full" style="display: none;">
+                    <p>DeepSpotCloud provides a way to execute deep learning task in a cost efficient way using GPU spot
+                        instances in AWS EC2. It utilizes spot instances across regions (continents) to broaden
+                        candidate instances. To preserve intermediate work even when an instance is interrupted due to
+                        an outbid event, DeepSpotCloud uses the checkpoint mechanism; an interrupted instance uploads a
+                        checkpoint outcome to a shared storage, and a new instance (in a different region/availability
+                        zone) resumes after downloading the checkpoint outcome.</p>
+                    <p>The goal of this website is to show how DeepSpotCloud operates. It currently runs on an AWS EC2
+                        g2.2xlarge spot instance while executing <a
+                                href="https://www.tensorflow.org/tutorials/deep_cnn">CIFAR-10 TensorFlow</a> job.</p>
+                    <p>
+                        <a class="btn btn-primary btn-lg" href="https://github.com/kmu-bigdata/deep-spot-cloud"
+                           target="_blank" role="button">Code on Github</a>
+                        <a class="btn btn-primary btn-lg" href="http://leeky.me/publications/deep-spot-cloud.pdf"
+                           target="_blank" role="button">See Paper</a>
+                    </p>
+                </div>
             </div>
         </div>
     </div>
