--- a/pricetable.html
+++ b/pricetable.html
@@ -138,27 +138,12 @@
 
 </div><!--/.main-->
 
-<div id="pleaseWaitDialog" data-backdrop="static" data-keyboard="false" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-
-        <!-- Modal content-->
-        <div class="modal-content">
-            <div class="modal-header"><h1>Fetching data...</h1></div>
-            <div class="modal-body">
-                <div class="progress">
-                    <div class="progress-bar progress-bar-striped active" role="progressbar"
-                         aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</div>
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="js/core/bootstrap.min.js"></script>
-<script src="js/core/chart.min.js"></script>
+<script src="https://cdn.jsdelivr.net/jquery.loadingoverlay/1.5.3/loadingoverlay.min.js"
+        integrity="sha256-D5BJBT8CyTCxkOVRiIoP4XmW4b3MDN9ZPbx50xI64uw=" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/jquery.loadingoverlay/1.5.3/loadingoverlay_progress.min.js"
+        integrity="sha256-a9i+LVk73CTLdUmOc7ZyyejAUe9nwBKaeRww6cLoREQ=" crossorigin="anonymous"></script>
 <script src="js/core/bootstrap-table.js"></script>
 <script type="text/javascript" src="js/app/base.js"></script>
 <script type="text/javascript" src="js/app/pricetable.js"></script>
